--- a/FireResistance.Web/Views/FireResistance/SlabWithRigidConnectionToTwoWalls.cshtml
+++ b/FireResistance.Web/Views/FireResistance/SlabWithRigidConnectionToTwoWalls.cshtml
@@ -31,7 +31,7 @@
                 <select asp-for="SourceData.ArmatureClass" size="1" class="form-control-sm">
                     @foreach (string value in nameColumns.ArmatureClass)
                     {
-                        <option value=@value>@value</option>
+                        <option value=@value>@value.Replace("_", " ")</option>
                     }
                 </select>
             </div>
@@ -44,7 +44,7 @@
                 <select asp-for="SourceData.ConcreteType" size="1" class="form-control-sm">
                     @foreach (string value in nameColumns.ConcreteType)
                     {
-                        <option value="@value">@value</option>
+                        <option value="@value">@value.Replace("_", " ")</option>
                     }
                 </select>
             </div>
@@ -69,7 +69,7 @@
             <label>  мм</label>
         </div>
         <div class="border p-1">
-            <label>Укажите ширина расматриваемого участка плиты:</label><br />
+            <label>Укажите ширина рассматриваемого участка плиты:</label><br />
             <input type="number" asp-for="SourceData.LengthAlong" />
             <span asp-validation-for="SourceData.LengthAlong" class="text-danger"></span>
             <label>  мм</label>
