--- a/FireResistance.Web/Views/FireResistance/ColumnFireFourSide.cshtml
+++ b/FireResistance.Web/Views/FireResistance/ColumnFireFourSide.cshtml
@@ -1,142 +1,121 @@
 ﻿@model DataOfColumnFireFourSideVM
 @inject NameColumns nameColumns
 
-@if(Model != null)
+@if (Model != null)
 {
     <partial name="_Result" model="@Model.Result" />
 }
 
-
 <form method="post">
-    <div class="border p-3">
-        <div class="border p-1">
-            <div class="col-4">
-                <label for="FireResistanceValue">Выберете требуемый предел огнестойкости:</label>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="FireResistanceValue">Выберите требуемый предел огнестойкости:</label>
+                    <select asp-for="SourceData.FireResistanceValue" size="1" class="form-control">
+                        @foreach (string value in nameColumns.FireResistanceForCriticalTemperature)
+                        {
+                            <option value="@value">@value</option>
+                        }
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="ArmatureClass">Выберите класс арматуры по прочности:</label>
+                    <select asp-for="SourceData.ArmatureClass" size="1" class="form-control">
+                        @foreach (string value in nameColumns.ArmatureClass)
+                        {
+                            <option value="@value">@value.Replace("_", " ")</option>
+                        }
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="ConcreteType">Выберите вид бетона:</label>
+                    <select asp-for="SourceData.ConcreteType" size="1" class="form-control">
+                        @foreach (string value in nameColumns.ConcreteType)
+                        {
+                            <option value="@value">@value.Replace("_", " ")</option>
+                        }
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="ConcreteClass">Выберите класс бетона:</label>
+                    <select asp-for="SourceData.ConcreteClass" size="1" class="form-control">
+                        @foreach (string value in nameColumns.ConcreteClass)
+                        {
+                            <option value="@value">@value</option>
+                        }
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="FixationElement">Выберите вариант закрепления по концам элемента:</label>
+                    <select asp-for="SourceData.FixationElement" size="1" class="form-control">
+                        @foreach (string value in nameColumns.FixationElement)
+                        {
+                            <option value="@value">@value.Replace("_", " ")</option>
+                        }
+                    </select>
+                </div>
             </div>
-            <div class="col-4">
-                <select asp-for="SourceData.FireResistanceValue" size="1" class="form-control-sm">
-                    @foreach (string value in nameColumns.FireResistanceForCriticalTemperature)
-                    {
-                        <option value="@value">@value</option>
-                    }
-                </select>
-            </div>
-        </div>
-        <div class="border p-1">
-            <div class="col-4">
-                <label for="ArmatureClass">Выберите класс арматуры по прочности:</label>
-            </div>
-            <div class="col-4">
-                <select asp-for="SourceData.ArmatureClass" size="1" class="form-control-sm">
-                    @foreach (string value in nameColumns.ArmatureClass)
-                    {
-                    <option value=@value>@value.Replace("_", " ")</option>
-                    }
-                </select>
-            </div>
-        </div>
-        <div class="border p-1">
-            <div class="col-4">
-                <label for="ConcreteType">Выберите вид бетона:</label>
-            </div>
-            <div class="col-4">
-                <select asp-for="SourceData.ConcreteType" size="1" class="form-control-sm">
-                    @foreach (string value in nameColumns.ConcreteType)
-                    {
-                        <option value="@value">@value.Replace("_", " ")</option>
-                    }
-                </select>
-            </div>
-        </div>
-        <div class="border p-1">
-            <div class="col-4">
-                <label for="ConcreteClass">Выберите класс бетона:</label>
-            </div>
-            <div class="col-4">
-                <select asp-for="SourceData.ConcreteClass" size="1" class="form-control-sm">
-                    @foreach (string value in nameColumns.ConcreteClass)
-                    {
-                        <option value="@value">@value</option>
-                    }
-                </select>
-            </div>
-        </div>
-        <div class="border p-1">
-            <div class="col-4">
-                <label for="FixationElement">Выберите вариант закрепления по концам элемента:</label>
-            </div>
-            <div class="col-4">
-                <select asp-for="SourceData.FixationElement" size="1" class="form-control-sm">
-                    @foreach (string value in nameColumns.FixationElement)
-                    {
-                        <option value="@value">@value.Replace("_", " ")</option>
-                    }
-                </select>
-            </div>
-        </div>
-        <div class="border p-1">
-            <label>Укажите длину элемента:</label><br />
-            <input type="number" asp-for="SourceData.LengthColumn" />
-            <span asp-validation-for="SourceData.LengthColumn" class="text-danger"></span>
-            <label>  мм</label>
-        </div>
-        <div class="border p-1">
-            <label>Укажите высоту элемента:</label><br />
-            <input type="number" asp-for="SourceData.HeighColumn" />
-            <span asp-validation-for="SourceData.HeighColumn" class="text-danger"></span>
-            <label>  мм</label>
-        </div>
-            <div class="border p-1">
-            <label>Укажите ширину элемента:</label><br />
-            <input type="number" asp-for="SourceData.WidthColumn" />
-            <span asp-validation-for="SourceData.WidthColumn" class="text-danger"></span>
-            <label>  мм</label>
-        </div>
-        <div class="border p-1">
-            <label>Укажите расстояние от грани элемента до центра тяжести арматуры:</label><br />
-            <input type="number" asp-for="SourceData.ArmatureInstallationDepth" />
-            <span asp-validation-for="SourceData.ArmatureInstallationDepth" class="text-danger"></span>
-            <label>  мм</label>
-        </div>
-        <div class="border p-1">
-            <div class="col-4">
-                <label for="ArmatureDiameter">Укажите диаметр арматуры:</label>
-            </div>
-            <div class="col-4">
-                <select asp-for="SourceData.ArmatureDiameter" size="1" class="form-control-sm">
-                    @foreach (int value in nameColumns.ArmatureDiameter)
-                    {
-                        <option value=@value>@value</option>
-                    }
-                </select>
-                <label>  мм</label>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="LengthColumn">Укажите длину элемента (мм):</label>
+                    <input type="number" asp-for="SourceData.LengthColumn" class="form-control" />
+                    <span asp-validation-for="SourceData.LengthColumn" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label for="HeightColumn">Укажите высоту элемента (мм):</label>
+                    <input type="number" asp-for="SourceData.HeighColumn" class="form-control" />
+                    <span asp-validation-for="SourceData.HeighColumn" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label for="WidthColumn">
+                        Укажите ширину элемента (мм):
+                        <input type="number" asp-for="SourceData.WidthColumn" class="form-control" />
+                        <span asp-validation-for="SourceData.WidthColumn" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label for="ArmatureInstallationDepth">Укажите расстояние от грани элемента до центра тяжести арматуры (мм):</label>
+                    <input type="number" asp-for="SourceData.ArmatureInstallationDepth" class="form-control" />
+                    <span asp-validation-for="SourceData.ArmatureInstallationDepth" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label for="ArmatureDiameter">Укажите диаметр арматуры (мм):</label>
+                    <select asp-for="SourceData.ArmatureDiameter" size="1" class="form-control">
+                        @foreach (int value in nameColumns.ArmatureDiameter)
+                        {
+                            <option value="@value">@value</option>
+                        }
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="ArmatureCount">Укажите количество арматуры (шт.):</label>
+                    <input type="number" asp-for="SourceData.ArmatureCount" class="form-control" />
+                    <span asp-validation-for="SourceData.ArmatureCount" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label for="Moment">Укажите величину изгибающего момента от постоянной и длительной нормативной нагрузки (т*м):</label>
+                    <input type="number" step="0.0001" asp-for="SourceData.Moment" class="form-control" />
+                    <span asp-validation-for="SourceData.Moment" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label for="Strength">Укажите величину нормальной силы от постоянной и длительной нормативной нагрузки (т):</label>
+                    <input type="number" step="0.0001" asp-for="SourceData.Strength" class="form-control" />
+                    <span asp-validation-for="SourceData.Strength" class="text-danger"></span>
+                </div>
             </div>
         </div>
-        <div class="border p-1">
-            <label>Укажите количество арматуры:</label><br />
-            <input type="number" asp-for="SourceData.ArmatureCount" />
-            <span asp-validation-for="SourceData.ArmatureCount" class="text-danger"></span>
-            <label>  шт.</label>
+        <div class="row">
+            <div class="col-md-12">
+                <button type="submit" class="btn btn-primary">Отправить</button>
+            </div>
         </div>
-        <div class="border p-1">
-            <label>Укажите величену изгибающего момента от постоянной и длительной нормативной нагрузки:</label><br />
-            <input type="number" step="0.0001" asp-for="SourceData.Moment" />
-            <span asp-validation-for="SourceData.Moment" class="text-danger"></span>
-            <label>  т*м</label>
-        </div>
-        <div class="border p-1">
-            <label>Укажите величену нормальной силы от постоянной и длительной нормативной нагрузки:</label><br />
-            <input type="number" step="0.0001" asp-for="SourceData.Strength" />
-            <span asp-validation-for="SourceData.Strength" class="text-danger"></span>
-            <label>  т</label>
-        </div>
-        <input type="submit" value="Send" />
     </div>
 </form>
 
-
 @section Scripts{
-    @{ <partial name="_ValidationScriptsPartial" /> }
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
 }
 
 
