--- a/FireResistance.Web/Views/Main/Index.cshtml
+++ b/FireResistance.Web/Views/Main/Index.cshtml
@@ -2,16 +2,22 @@
 <article>
     <section>
         <h5>Общая информация о ресурсе</h5>
-        <small>
-            <p>
-                Данный ресурс предоставляет пользователям возможность проведения расчетов по определению пределов огнестойкости железобетонных конструкций.<br />
-                На данный момент реализованы 3 типа расчетов: <br />
-                <a asp-controller="FireResistance" asp-action="ColumnFireFourSide">- Проверка предела огнестойкости железобетонной колонны подверженной огневому воздействию с 4 сторон.</br></a>
-                <a asp-controller="FireResistance" asp-action="SlabWithRigidConnectionToColumns">- Проверка предела огнестойкости безбалочной железобетонной плиты перекрытия сплошного сечения с жестким опиранием на колонны. При условии огневого воздействия снизу.</br></a>
-                <a asp-controller="FireResistance" asp-action="SlabWithRigidConnectionToTwoWalls">- Проверка предела огнестойкости безбалочной железобетонной плиты перекрытия сплошного сечения с жестким опиранием по двум сторонам на стены. При условии огневого воздействия снизу.</br></a>
-            </p>
-        </small>
-    </section>
+        <p>
+            Данный ресурс предоставляет пользователям возможность проведения расчетов по определению пределов огнестойкости железобетонных конструкций.
+            На данный момент реализованы 3 типа расчетов:
+        </p>
+        <ol>
+            <li>
+                <a asp-controller="FireResistance" asp-action="ColumnFireFourSide">Проверка предела огнестойкости железобетонной колонны подверженной огневому воздействию с 4 сторон.</a>
+            </li>
+            <li>
+                <a asp-controller="FireResistance" asp-action="SlabWithRigidConnectionToColumns">Проверка предела огнестойкости безбалочной железобетонной плиты перекрытия сплошного сечения с жестким опиранием на колонны. При условии огневого воздействия снизу.</a>
+            </li>
+            <li>
+                <a asp-controller="FireResistance" asp-action="SlabWithRigidConnectionToTwoWalls">Проверка предела огнестойкости безбалочной железобетонной плиты перекрытия сплошного сечения с жестким опиранием по двум сторонам на стены. При условии огневого воздействия снизу.</a>
+            </li>
+        </ol>
+    </section><hr>
     <section>
         <h5>Общая информация о методиках расчета огнестойкости</h5>
         <small>
