--- a/FireResistance.Web/Views/FireResistance/SlabWithRigidConnectionToColumns.cshtml
+++ b/FireResistance.Web/Views/FireResistance/SlabWithRigidConnectionToColumns.cshtml
@@ -8,144 +8,121 @@
 
 <form method="post">
     <input asp-for="SourceData.IsOnCollums" value="1" hidden />
-    <div class="border p-3">
-        <div class="border p-1">
-            <div class="col-4">
-                <label for="FireResistanceValue">Выберете требуемый предел огнестойкости:</label>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="FireResistanceValue">Выберете требуемый предел огнестойкости:</label>
+                    <select asp-for="SourceData.FireResistanceValue" size="1" class="form-control">
+                        @foreach (string value in nameColumns.FireResistanceForCriticalTemperature)
+                        {
+                            <option value="@value">@value</option>
+                        }
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="ArmatureClass">Выберите класс арматуры по прочности:</label>
+                    <select asp-for="SourceData.ArmatureClass" size="1" class="form-control">
+                        @foreach (string value in nameColumns.ArmatureClass)
+                        {
+                            <option value=@value>@value.Replace("_", " ")</option>
+                        }
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="ConcreteType">Выберите вид бетона:</label>
+                    <select asp-for="SourceData.ConcreteType" size="1" class="form-control">
+                        @foreach (string value in nameColumns.ConcreteType)
+                        {
+                            <option value="@value">@value.Replace("_", " ")</option>
+                        }
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="ConcreteClass">Выберите класс бетона:</label>
+                    <select asp-for="SourceData.ConcreteClass" size="1" class="form-control">
+                        @foreach (string value in nameColumns.ConcreteClass)
+                        {
+                            <option value="@value">@value</option>
+                        }
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="LengthAcross">Укажите расстояние между рядами колонн в перпендикулярном направлении (Длина пролета) (мм):</label>
+                    <input type="number" asp-for="SourceData.LengthAcross" class="form-control" />
+                    <span asp-validation-for="SourceData.LengthAcross" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label for="LengthAlong">Укажите расстояние между рядами колонн вдоль рассматриваемой полосы (Ширина рассматриваемого участка плиты) (мм):</label>
+                    <input type="number" asp-for="SourceData.LengthAlong" class="form-control" />
+                    <span asp-validation-for="SourceData.LengthAlong" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label for="DistanceFromEdgeOfColumnToHinge">Укажите расстояние от крайних пластических шарниров до ближайших к ним рядов колонн (мм):</label>
+                    <input type="number" asp-for="SourceData.DistanceFromEdgeOfColumnToHinge" class="form-control" />
+                    <span asp-validation-for="SourceData.DistanceFromEdgeOfColumnToHinge" class="text-danger"></span>
+                </div>
             </div>
-            <div class="col-4">
-                <select asp-for="SourceData.FireResistanceValue" size="1" class="form-control-sm">
-                    @foreach (string value in nameColumns.FireResistanceForCriticalTemperature)
-                    {
-                        <option value="@value">@value</option>
-                    }
-                </select>
-            </div>
-        </div>
-        <div class="border p-1">
-            <div class="col-4">
-                <label for="ArmatureClass">Выберите класс арматуры по прочности:</label>
-            </div>
-            <div class="col-4">
-                <select asp-for="SourceData.ArmatureClass" size="1" class="form-control-sm">
-                    @foreach (string value in nameColumns.ArmatureClass)
-                    {
-                        <option value=@value>@value.Replace("_", " ")</option>
-                    }
-                </select>
-            </div>
-        </div>
-        <div class="border p-1">
-            <div class="col-4">
-                <label for="ConcreteType">Выберите вид бетона:</label>
-            </div>
-            <div class="col-4">
-                <select asp-for="SourceData.ConcreteType" size="1" class="form-control-sm">
-                    @foreach (string value in nameColumns.ConcreteType)
-                    {
-                        <option value="@value">@value.Replace("_", " ")</option>
-                    }
-                </select>
-            </div>
-        </div>
-        <div class="border p-1">
-            <div class="col-4">
-                <label for="ConcreteClass">Выберите класс бетона:</label>
-            </div>
-            <div class="col-4">
-                <select asp-for="SourceData.ConcreteClass" size="1" class="form-control-sm">
-                    @foreach (string value in nameColumns.ConcreteClass)
-                    {
-                        <option value="@value">@value</option>
-                    }
-                </select>
-            </div>
-        </div>
-        <div class="border p-1">
-            <label>Укажите расстояние между рядами колонн в перпендикулярном направлении (Длина пролета):</label><br />
-            <input type="number" asp-for="SourceData.LengthAcross" />
-            <span asp-validation-for="SourceData.LengthAcross" class="text-danger"></span>
-            <label>  мм</label>
-        </div>
-        <div class="border p-1">
-            <label>Укажите расстояние между рядами колонн вдоль рассматриваемой полосы (Ширина рассматриваемого участка плиты):</label><br />
-            <input type="number" asp-for="SourceData.LengthAlong" />
-            <span asp-validation-for="SourceData.LengthAlong" class="text-danger"></span>
-            <label>  мм</label>
-        </div>
-        <div class="border p-1">
-            <label>Укажите расстояние от крайних пластических шарниров до ближайших к ним рядов колонн:</label><br />
-            <input type="number" asp-for="SourceData.DistanceFromEdgeOfColumnToHinge" />
-            <span asp-validation-for="SourceData.DistanceFromEdgeOfColumnToHinge" class="text-danger"></span>
-            <label>  мм</label>
-        </div>
-        <div class="border p-1">
-            <label>Укажите высоту плиты:</label><br />
-            <input type="number" asp-for="SourceData.Heigh" />
-            <span asp-validation-for="SourceData.Heigh" class="text-danger"></span>
-            <label>  мм</label>
-        </div>
-        <div class="border p-1">
-            <label>Укажите расстояние от нижней грани элемента до оси арматуры:</label><br />
-            <input type="number" asp-for="SourceData.ArmatureInstallationDepthFromBelow" />
-            <span asp-validation-for="SourceData.ArmatureInstallationDepthFromBelow" class="text-danger"></span>
-            <label>  мм</label>
-        </div>
-        <div class="border p-1">
-            <label>Укажите расстояние от верхней грани элемента до оси арматуры:</label><br />
-            <input type="number" asp-for="SourceData.ArmatureInstallationDepthFromAbove" />
-            <span asp-validation-for="SourceData.ArmatureInstallationDepthFromAbove" class="text-danger"></span>
-            <label>  мм</label>
-        </div>
-        <div class="border p-1">
-            <div class="col-4">
-                <label for="ArmatureDiameter">Укажите диаметр продольной растянутой нижней арматуры:</label>
-            </div>
-            <div class="col-4">
-                <select asp-for="SourceData.ArmatureDiameter" size="1" class="form-control-sm">
-                    @foreach (int value in nameColumns.ArmatureDiameter)
-                    {
-                        <option value=@value>@value</option>
-                    }
-                </select>
-                <label>  мм</label>
-            </div>
-        </div>
-        <div class="border p-1">
-            <label>Укажите количество нижней арматуры:</label><br />
-            <input type="number" asp-for="SourceData.ArmatureCount" />
-            <span asp-validation-for="SourceData.ArmatureCount" class="text-danger"></span>
-            <label>  шт.</label>
-        </div>
-        <div class="border p-1">
-            <div class="col-4">
-                <label for="ArmatureDiameter">Укажите диаметр продольной растянутой верхней арматуры:</label>
-            </div>
-            <div class="col-4">
-                <select asp-for="SourceData.ArmatureDiameterFromAbove" size="1" class="form-control-sm">
-                    @foreach (int value in nameColumns.ArmatureDiameter)
-                    {
-                        <option value=@value>@value</option>
-                    }
-                </select>
-                <label>  мм</label>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="Heigh">Укажите высоту плиты (мм):</label>
+                    <input type="number" asp-for="SourceData.Heigh" class="form-control" />
+                    <span asp-validation-for="SourceData.Heigh" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label for="ArmatureInstallationDepthFromBelow">Укажите расстояние от нижней грани элемента до оси арматуры (мм):</label>
+                    <input type="number" asp-for="SourceData.ArmatureInstallationDepthFromBelow" class="form-control" />
+                    <span asp-validation-for="SourceData.ArmatureInstallationDepthFromBelow" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label for ="ArmatureInstallationDepthFromAbove">Укажите расстояние от верхней грани элемента до оси арматуры (мм):</label>
+                    <input type="number" asp-for="SourceData.ArmatureInstallationDepthFromAbove" class="form-control" />
+                    <span asp-validation-for="SourceData.ArmatureInstallationDepthFromAbove" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label for="ArmatureDiameter">Укажите диаметр продольной растянутой нижней арматуры (мм):</label>
+                    <select asp-for="SourceData.ArmatureDiameter" size="1" class="form-control">
+                        @foreach (int value in nameColumns.ArmatureDiameter)
+                        {
+                            <option value=@value>@value</option>
+                        }
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="ArmatureCount">Укажите количество нижней арматуры (шт.):</label>
+                    <input type="number" asp-for="SourceData.ArmatureCount" class="form-control" />
+                    <span asp-validation-for="SourceData.ArmatureCount" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label for="ArmatureDiameterFromAbove">Укажите диаметр продольной растянутой верхней арматуры (мм):</label>
+                    <select asp-for="SourceData.ArmatureDiameterFromAbove" size="1" class="form-control">
+                        @foreach (int value in nameColumns.ArmatureDiameter)
+                        {
+                            <option value=@value>@value</option>
+                        }
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="ArmatureCountFromAbove">Укажите количество верхней арматуры (шт.):</label>
+                    <input type="number" asp-for="SourceData.ArmatureCountFromAbove" class="form-control" />
+                    <span asp-validation-for="SourceData.ArmatureCountFromAbove" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label for="DistributedLoad">Укажите интенсивность нормативной постоянной и временной длительной нагрузок, равномерно распределенных по полосе на 1 пог. м с коэф. перегруза γf = 1 (т*м):</label>
+                    <input type="number" step="0.0001" asp-for="SourceData.DistributedLoad" class="form-control" />
+                    <span asp-validation-for="SourceData.DistributedLoad" class="text-danger"></span>
+                </div>
             </div>
         </div>
-        <div class="border p-1">
-            <label>Укажите количество верхней арматуры:</label><br />
-            <input type="number" asp-for="SourceData.ArmatureCountFromAbove" />
-            <span asp-validation-for="SourceData.ArmatureCountFromAbove" class="text-danger"></span>
-            <label>  шт.</label>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <button type="submit" class="btn btn-primary">Выполнить расчет</button>
         </div>
-        <div class="border p-1">
-            <label>Укажите интенсивность нормативной постоянной и временной длительной нагрузок, равномерно распределенных по полосе на 1 пог. м с коэф. перегруза γf = 1:</label><br />
-            <input type="number" step="0.0001" asp-for="SourceData.DistributedLoad" />
-            <span asp-validation-for="SourceData.DistributedLoad" class="text-danger"></span>
-            <label>  т*м</label>
-        </div>
-        <input type="submit" value="Send" />
+    </div>
     </div>
 </form>
+
 
 
 @section Scripts{
