--- a/FireResistance.Web/Views/Shared/_Layout.cshtml
+++ b/FireResistance.Web/Views/Shared/_Layout.cshtml
@@ -23,12 +23,12 @@
                 <a class="navbar-brand" asp-area="" asp-controller="Main" asp-action="Index">
                     <img src="~/images/fire.png" width="70%" />
                 </a>
-@*                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <partial name="_LoginPartial" />*@
+                    <partial name="_LoginPartial" />
                     
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
