--- a/FireResistance.Web/Views/Shared/_Layout.cshtml
+++ b/FireResistance.Web/Views/Shared/_Layout.cshtml
@@ -45,6 +45,9 @@
                                 @*<li><hr class="dropdown-divider"></li>*@
                             </div>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Archive" asp-action="Index">Сохраненные расчеты</a>
+                        </li>
                     </ul>
              </div>
         </nav>
