--- a/FireResistance.Web/Views/FireResistance/ColumnFireFourSide.cshtml
+++ b/FireResistance.Web/Views/FireResistance/ColumnFireFourSide.cshtml
@@ -1,10 +1,16 @@
 ﻿@model DataOfColumnFireFourSideVM
 @inject NameColumns nameColumns
-
+@{
+    double strength = 0;
+    double moment = 0;
+}
 @if (Model != null)
 {
     <partial name="_Result" model="@Model.Result" />
+    strength = Model.SourceData.Strength * 0.00010197162123;
+    moment = Model.SourceData.Moment * 0.00000010197162123;
 }
+
 
 <form method="post">
     <div class="container">
@@ -94,21 +100,28 @@
                 </div>
                 <div class="form-group">
                     <label for="Moment">Укажите величину изгибающего момента от постоянной и длительной нормативной нагрузки (т*м):</label>
-                    <input type="number" step="0.0001" asp-for="SourceData.Moment" class="form-control" />
+                    <input type="number" step="0.0001" asp-for="SourceData.Moment" value="@moment" class="form-control" />
                     <span asp-validation-for="SourceData.Moment" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label for="Strength">Укажите величину нормальной силы от постоянной и длительной нормативной нагрузки (т):</label>
-                    <input type="number" step="0.0001" asp-for="SourceData.Strength" class="form-control" />
+                    <input type="number" step="0.0001" asp-for="SourceData.Strength" value="@strength" class="form-control" />
                     <span asp-validation-for="SourceData.Strength" class="text-danger"></span>
                 </div>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-12">
-                <button type="submit" class="btn btn-primary">Выполнить расчет</button>
+            <div class="col-md-2">
+                <button asp-action="ColumnFireFourSide" type="submit" class="btn btn-primary">Выполнить расчет</button>
             </div>
+        @if (User.Identity.IsAuthenticated)
+        {
+            <div class="col-md-4">
+                    <button asp-action="AddDataForCalculationOfColumn" type="submit" class="btn btn-primary">Сохранить расчетные данные</button>
+            </div>
+        }
         </div>
+        
     </div>
 </form>
 
