--- a/FireResistance.Web/Views/Archive/Index.cshtml
+++ b/FireResistance.Web/Views/Archive/Index.cshtml
@@ -15,7 +15,7 @@
     {
         @if (Model.DataForColumn != null && Model.DataForColumn.Count() > 0)
         {
-            <h4 class="text-primary">Расчет колонн на огнестойкость при огневом воздействии с 4 сторон</h4>
+            <h4 class="text">Расчет колонн на огнестойкость при огневом воздействии с 4 сторон</h4>
             <table class="table table-bordered table-striped" style="width:100%">
                 <thead>
                     <tr>
@@ -56,7 +56,7 @@
         }
         @if (Model.DataForSlab != null && Model.DataForSlab.Count() > 0)
         {
-            <h4 class="text-primary">Расчеты сплошных плит на огнестойкость при огневом воздействии снизу</h4>
+            <h4 class="text">Расчеты сплошных плит на огнестойкость при огневом воздействии снизу</h4>
             <table class="table table-bordered table-striped" style="width:100%">
                 <thead>
                     <tr>
