--- a/FireResistance.Web/Views/FireResistance/ColumnFireFourSide.cshtml
+++ b/FireResistance.Web/Views/FireResistance/ColumnFireFourSide.cshtml
@@ -11,7 +11,9 @@
     moment = Model.SourceData.Moment * 0.00000010197162123;
 }
 
-
+<div class="border p-3">
+    <h4>Расчет колонн на огнестойкость при огневом воздействии с 4 сторон</h4>
+</div>
 <form method="post">
     <div class="container">
         <div class="row">
