--- a/FireResistance.Web/Views/FireResistance/SlabWithRigidConnectionToColumns.cshtml
+++ b/FireResistance.Web/Views/FireResistance/SlabWithRigidConnectionToColumns.cshtml
@@ -11,6 +11,10 @@
     distributedLoad = Model.SourceData.DistributedLoad / 0.0098066501;
 }
 
+<div class="border p-3">
+    <h4>Расчет сплошной плиты опертой на колонны, на огнестойкость при огневом воздействии снизу</h4>
+</div>
+
 <form method="post">
     <input asp-for="SourceData.IsOnCollums" value="1" hidden />
     <div class="container">
