--- a/FireResistance.Web/Views/FireResistance/SlabWithRigidConnectionToTwoWalls.cshtml
+++ b/FireResistance.Web/Views/FireResistance/SlabWithRigidConnectionToTwoWalls.cshtml
@@ -11,6 +11,11 @@
     distributedLoad = Model.SourceData.DistributedLoad / 0.0098066501;
 }
 
+<div class="border p-3">
+    <h4>Расчет сплошной плиты опертой на стены, на огнестойкость при огневом воздействии снизу</h4>
+</div>
+
+
 <form method="post" asp-action="SlabWithRigidConnectionToColumns">
     <input asp-for="SourceData.IsOnCollums" value="0" hidden />
     <input asp-for="SourceData.DistanceFromEdgeOfColumnToHinge" value="0" hidden />
