--- a/FireResistance.Web/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/FireResistance.Web/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -1,22 +1,22 @@
 ﻿@page
 @model RegisterConfirmationModel
 @{
-    ViewData["Title"] = "Register confirmation";
+    ViewData["Title"] = "Подтверждение регистрации";
 }
 
 <h1>@ViewData["Title"]</h1>
 @{
     if (@Model.DisplayConfirmAccountLink)
     {
-<p>
-    This app does not currently have a real email sender registered, see <a href="https://aka.ms/aspaccountconf">these docs</a> for how to configure a real email sender.
-    Normally this would be emailed: <a id="confirm-link" href="@Model.EmailConfirmationUrl">Click here to confirm your account</a>
-</p>
+//<p>
+//            В настоящее время в этом приложении не зарегистрирован реальный отправитель электронной почты, смотрите <a href="https://aka.ms/aspaccountconf">these docs</a> for how to configure a real email sender.
+//    Normally this would be emailed: <a id="confirm-link" href="@Model.EmailConfirmationUrl">Click here to confirm your account</a>
+//</p>
     }
     else
     {
 <p>
-        Please check your email to confirm your account.
+            Пожалуйста, проверьте свою электронную почту, чтобы подтвердить свою учетную запись..
 </p>
     }
 }
