--- a/FireResistance.Web/Views/Archive/Index.cshtml
+++ b/FireResistance.Web/Views/Archive/Index.cshtml
@@ -39,9 +39,7 @@
                             <td width="30%">@obj.SaveDate</td>
                             <td class="text-center">
                                 <div class="w-75 btn-group" role="group">
-                                    <a asp-controller="Archive" asp-action="DeleteDataOfColumn" asp-route-Id="@obj.Id" class="btn btn-danger mx-2">
-                                        <i class="far fa-trash-alt"></i>
-                                    </a>
+                                     <button asp-controller="Archive" asp-action="DeleteDataOfColumn" asp-route-Id="@obj.Id" class="btn btn-primary">Удалить</button>
                                 </div>
                             </td>
                         </tr>
@@ -80,9 +78,7 @@
                             <td width="30%">@obj.SaveDate</td>
                             <td class="text-center">
                                 <div class="w-75 btn-group" role="group">
-                                    <a asp-route-Id="@obj.Id" asp-action="DeleteDataOfSlab" class="btn btn-danger mx-2">
-                                        <i class="far fa-trash-alt"></i>
-                                    </a>
+                                    <button asp-controller="Archive" asp-action="DeleteDataOfSlab" asp-route-Id="@obj.Id" class="btn btn-primary">Удалить</button>
                                 </div>
                             </td>
                         </tr>
