--- a/FireResistance.Web/Views/FireResistance/ColumnFireFourSide.cshtml
+++ b/FireResistance.Web/Views/FireResistance/ColumnFireFourSide.cshtml
@@ -67,23 +67,23 @@
             </div>
             <div class="col-md-6">
                 <div class="form-group">
-                    <label for="LengthColumn">Укажите длину элемента (мм):</label>
+                    <label for="LengthColumn">Укажите длину элемента (l, мм):</label>
                     <input type="number" asp-for="SourceData.LengthColumn" class="form-control" />
                     <span asp-validation-for="SourceData.LengthColumn" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label for="HeightColumn">Укажите высоту элемента (мм):</label>
+                    <label for="HeightColumn">Укажите высоту элемента (h, мм):</label>
                     <input type="number" asp-for="SourceData.HeighColumn" class="form-control" />
                     <span asp-validation-for="SourceData.HeighColumn" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label for="WidthColumn">
-                        Укажите ширину элемента (мм):
+                        Укажите ширину элемента (b, мм):
                         <input type="number" asp-for="SourceData.WidthColumn" class="form-control" />
                         <span asp-validation-for="SourceData.WidthColumn" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label for="ArmatureInstallationDepth">Укажите расстояние от грани элемента до центра тяжести арматуры (мм):</label>
+                    <label for="ArmatureInstallationDepth">Укажите расстояние от грани элемента до центра тяжести арматуры (a, мм):</label>
                     <input type="number" asp-for="SourceData.ArmatureInstallationDepth" class="form-control" />
                     <span asp-validation-for="SourceData.ArmatureInstallationDepth" class="text-danger"></span>
                 </div>
@@ -102,12 +102,12 @@
                     <span asp-validation-for="SourceData.ArmatureCount" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label for="Moment">Укажите величину изгибающего момента от постоянной и длительной нормативной нагрузки (т*м):</label>
+                    <label for="Moment">Укажите величину изгибающего момента от постоянной и длительной нормативной нагрузки (M, т*м):</label>
                     <input type="number" step="0.0001" asp-for="SourceData.Moment" value="@moment" class="form-control" />
                     <span asp-validation-for="SourceData.Moment" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label for="Strength">Укажите величину нормальной силы от постоянной и длительной нормативной нагрузки (т):</label>
+                    <label for="Strength">Укажите величину нормальной силы от постоянной и длительной нормативной нагрузки (N, т):</label>
                     <input type="number" step="0.0001" asp-for="SourceData.Strength" value="@strength" class="form-control" />
                     <span asp-validation-for="SourceData.Strength" class="text-danger"></span>
                 </div>
