--- a/FireResistance.Web/Views/FireResistance/SlabWithRigidConnectionToColumns.cshtml
+++ b/FireResistance.Web/Views/FireResistance/SlabWithRigidConnectionToColumns.cshtml
@@ -56,34 +56,34 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="LengthAcross">Укажите расстояние между рядами колонн в перпендикулярном направлении (Длина пролета) (мм):</label>
+                    <label for="LengthAcross">Укажите расстояние между рядами колонн в перпендикулярном направлении (Длина пролета) (l1, мм):</label>
                     <input type="number" asp-for="SourceData.LengthAcross" class="form-control" />
                     <span asp-validation-for="SourceData.LengthAcross" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label for="LengthAlong">Укажите расстояние между рядами колонн вдоль рассматриваемой полосы (Ширина рассматриваемого участка плиты) (мм):</label>
+                    <label for="LengthAlong">Укажите расстояние между рядами колонн вдоль рассматриваемой полосы (Ширина рассматриваемого участка плиты) (l2, мм):</label>
                     <input type="number" asp-for="SourceData.LengthAlong" class="form-control" />
                     <span asp-validation-for="SourceData.LengthAlong" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label for="DistanceFromEdgeOfColumnToHinge">Укажите расстояние от крайних пластических шарниров до ближайших к ним рядов колонн (мм):</label>
+                    <label for="DistanceFromEdgeOfColumnToHinge">Укажите расстояние от крайних пластических шарниров до ближайших к ним рядов колонн (c, мм):</label>
                     <input type="number" asp-for="SourceData.DistanceFromEdgeOfColumnToHinge" class="form-control" />
                     <span asp-validation-for="SourceData.DistanceFromEdgeOfColumnToHinge" class="text-danger"></span>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="form-group">
-                    <label for="Heigh">Укажите высоту плиты (мм):</label>
+                    <label for="Heigh">Укажите высоту плиты (h, мм):</label>
                     <input type="number" asp-for="SourceData.Heigh" class="form-control" />
                     <span asp-validation-for="SourceData.Heigh" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label for="ArmatureInstallationDepthFromBelow">Укажите расстояние от нижней грани элемента до оси арматуры (мм):</label>
+                    <label for="ArmatureInstallationDepthFromBelow">Укажите расстояние от нижней грани элемента до оси арматуры (a, мм):</label>
                     <input type="number" asp-for="SourceData.ArmatureInstallationDepthFromBelow" class="form-control" />
                     <span asp-validation-for="SourceData.ArmatureInstallationDepthFromBelow" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label for ="ArmatureInstallationDepthFromAbove">Укажите расстояние от верхней грани элемента до оси арматуры (мм):</label>
+                    <label for ="ArmatureInstallationDepthFromAbove">Укажите расстояние от верхней грани элемента до оси арматуры (a', мм):</label>
                     <input type="number" asp-for="SourceData.ArmatureInstallationDepthFromAbove" class="form-control" />
                     <span asp-validation-for="SourceData.ArmatureInstallationDepthFromAbove" class="text-danger"></span>
                 </div>
@@ -116,7 +116,7 @@
                     <span asp-validation-for="SourceData.ArmatureCountFromAbove" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label for="DistributedLoad">Укажите интенсивность нормативной постоянной и временной длительной нагрузок, равномерно распределенных по полосе на 1 пог. м с коэф. перегруза γf = 1 (т*м):</label>
+                    <label for="DistributedLoad">Укажите интенсивность нормативной постоянной и временной длительной нагрузок, равномерно распределенных по полосе на 1 пог. м с коэф. перегруза γf = 1 (q, т*м):</label>
                     <input type="number" step="0.0001" asp-for="SourceData.DistributedLoad" value="@distributedLoad" class="form-control" />
                     <span asp-validation-for="SourceData.DistributedLoad" class="text-danger"></span>
                 </div>
