--- a/FireResistance.Web/Views/Archive/Index.cshtml
+++ b/FireResistance.Web/Views/Archive/Index.cshtml
@@ -27,19 +27,23 @@
                     @foreach (var obj in Model.DataForColumn)
                     {
                         <tr>
-                            <td width="50%">
+                            <td width="50%" class="text-center">
                                 <form method="post">
                                     @{
-                                        double strength = obj.Strength * 0.00010197162123;
-                                        double moment = obj.Moment * 0.00000010197162123;
+                                        double strength = Math.Round(obj.Strength * 0.00010197162123, 2);
+                                        double moment = Math.Round(obj.Moment * 0.00000010197162123, 2);
                                     }
-                                    <a asp-controller="FireResistance" asp-action="LoadColumnFireFourSide" asp-route-id="@obj.Id" type="submit">Колонна @obj.HeighColumn x @obj.WidthColumn, @obj.FireResistanceValue, M=@moment т*м, N=@strength т</a>
+                                    <div class="container">
+                                        <div class="row">
+                                            <a asp-controller="FireResistance" asp-action="LoadColumnFireFourSide" asp-route-id="@obj.Id" type="submit" style="background-color:gainsboro; border-color:gray; color:black" class="btn btn-primary">Колонна @obj.HeighColumn x @obj.WidthColumn, @obj.FireResistanceValue, M=@moment т*м, N=@strength т</a>
+                                        </div>
+                                    </div>
                                 </form>
                             </td>
                             <td width="30%">@obj.SaveDate</td>
                             <td class="text-center">
                                 <div class="w-75 btn-group" role="group">
-                                     <button asp-controller="Archive" asp-action="DeleteDataOfColumn" asp-route-Id="@obj.Id" class="btn btn-primary">Удалить</button>
+                                    <a asp-controller="Archive" asp-action="DeleteDataOfColumn" asp-route-Id="@obj.Id" style="background-color:firebrick; border-color:firebrick; color:white" class="btn btn-primary">Удалить</a>
                                 </div>
                             </td>
                         </tr>
@@ -66,19 +70,23 @@
                     @foreach (var obj in Model.DataForSlab)
                     {
                         <tr>
-                            <td width="50%">
+                            <td width="50%" class="text-center">
                                 <form method="post">
                                     @{
-                                        double distributedLoad = obj.DistributedLoad / 0.0098066501;
+                                        double distributedLoad = Math.Round(obj.DistributedLoad / 0.0098066501, 2);
                                         string pillar = obj.IsOnCollums == 1 ? "колонны" : "стены";
                                     }
-                                    <a asp-controller="FireResistance" asp-action="LoadSlab" asp-route-id="@obj.Id" type="submit">Плита опретая на @pillar, h = @obj.Heigh, @obj.FireResistanceValue, M=@distributedLoad т/м2</a>
+                                    <div class="container">
+                                        <div class="row">
+                                            <a asp-controller="FireResistance" asp-action="LoadSlab" asp-route-id="@obj.Id" type="submit" style="background-color:gainsboro; border-color:gray; color:black" class="btn btn-primary">Плита опретая на @pillar, h = @obj.Heigh, @obj.FireResistanceValue, M=@distributedLoad т/м2</a>
+                                        </div>
+                                    </div>
                                 </form>
                             </td>
                             <td width="30%">@obj.SaveDate</td>
                             <td class="text-center">
                                 <div class="w-75 btn-group" role="group">
-                                    <button asp-controller="Archive" asp-action="DeleteDataOfSlab" asp-route-Id="@obj.Id" class="btn btn-primary">Удалить</button>
+                                    <a asp-controller="Archive" asp-action="DeleteDataOfSlab" asp-route-Id="@obj.Id" style="background-color:firebrick; border-color:firebrick; color:white" class="btn btn-primary">Удалить</a>
                                 </div>
                             </td>
                         </tr>
