--- a/FireResistance.Web/Views/FireResistance/ColumnFireFourSide.cshtml
+++ b/FireResistance.Web/Views/FireResistance/ColumnFireFourSide.cshtml
@@ -7,13 +7,19 @@
 }
 @if (Model != null)
 {
+    <div class="container">
+        <div class="row">
+            <a href="#sourcedata" style="background-color:gainsboro; border-color:gray; color:black" class="btn btn-primary" >Перейти к исходным данным</a>
+        </div>
+    </div>
+    @*<a href="#sourcedata" style="color: black">Перейти к исходным данным</a>*@
     <partial name="_Result" model="@Model.Result" />
-    strength = Model.SourceData.Strength * 0.00010197162123;
-    moment = Model.SourceData.Moment * 0.00000010197162123;
+    strength = Math.Round(Model.SourceData.Strength * 0.00010197162123, 2);
+    moment = Math.Round(Model.SourceData.Moment * 0.00000010197162123, 2);
 }
 
 <div class="border p-3">
-    <h4>Расчет колонн на огнестойкость при огневом воздействии с 4 сторон</h4>
+    <h4 id="sourcedata" >Расчет колонн на огнестойкость при огневом воздействии с 4 сторон</h4>
 </div>
 <form method="post">
     <div class="container">
@@ -115,12 +121,12 @@
         </div>
         <div class="row">
             <div class="col-md-2">
-                <button asp-action="ColumnFireFourSide" type="submit" class="btn btn-primary">Выполнить расчет</button>
+                <button asp-action="ColumnFireFourSide" type="submit" style="background-color:gainsboro; border-color:gray; color:black" class="btn btn-primary">Выполнить расчет</button>
             </div>
         @if (User.Identity.IsAuthenticated)
         {
             <div class="col-md-4">
-                    <button asp-action="AddDataForCalculationOfColumn" type="submit" class="btn btn-primary">Сохранить расчетные данные</button>
+                    <button asp-action="AddDataForCalculationOfColumn" type="submit" style="background-color:gainsboro; border-color:gray; color:black" class="btn btn-primary">Сохранить расчетные данные</button>
             </div>
         }
         </div> 
