--- a/FireResistance.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/FireResistance.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -30,7 +30,7 @@
                     </label>
                 </div>
                 <div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Авторизоваться</button>
+                    <button id="login-submit" type="submit" class="btn btn-common">Авторизоваться</button>
                 </div>
                 <div>
 @*                    <p>
