--- a/FireResistance.Web/Views/Archive/Index.cshtml
+++ b/FireResistance.Web/Views/Archive/Index.cshtml
@@ -35,7 +35,7 @@
                                     }
                                     <div class="container">
                                         <div class="row">
-                                            <a asp-controller="FireResistance" asp-action="LoadColumnFireFourSide" asp-route-id="@obj.Id" type="submit" style="background-color:gainsboro; border-color:gray; color:black" class="btn btn-primary">Колонна @obj.HeighColumn x @obj.WidthColumn, @obj.FireResistanceValue, M=@moment т*м, N=@strength т</a>
+                                            <a asp-controller="FireResistance" asp-action="LoadColumnFireFourSide" asp-route-id="@obj.Id" class="btn btn-common">Колонна @obj.HeighColumn x @obj.WidthColumn, @obj.FireResistanceValue, M=@moment т*м, N=@strength т</a>
                                         </div>
                                     </div>
                                 </form>
@@ -43,7 +43,7 @@
                             <td width="30%">@obj.SaveDate</td>
                             <td class="text-center">
                                 <div class="w-75 btn-group" role="group">
-                                    <a asp-controller="Archive" asp-action="DeleteDataOfColumn" asp-route-Id="@obj.Id" style="background-color:firebrick; border-color:firebrick; color:white" class="btn btn-primary">Удалить</a>
+                                    <a asp-controller="Archive" asp-action="DeleteDataOfColumn" asp-route-Id="@obj.Id" class="btn btn-del">Удалить</a>
                                 </div>
                             </td>
                         </tr>
@@ -78,7 +78,7 @@
                                     }
                                     <div class="container">
                                         <div class="row">
-                                            <a asp-controller="FireResistance" asp-action="LoadSlab" asp-route-id="@obj.Id" type="submit" style="background-color:gainsboro; border-color:gray; color:black" class="btn btn-primary">Плита опретая на @pillar, h = @obj.Heigh, @obj.FireResistanceValue, M=@distributedLoad т/м2</a>
+                                            <a asp-controller="FireResistance" asp-action="LoadSlab" asp-route-id="@obj.Id" type="submit" class="btn btn-common">Плита опретая на @pillar, h = @obj.Heigh, @obj.FireResistanceValue, M=@distributedLoad т/м2</a>
                                         </div>
                                     </div>
                                 </form>
@@ -86,7 +86,7 @@
                             <td width="30%">@obj.SaveDate</td>
                             <td class="text-center">
                                 <div class="w-75 btn-group" role="group">
-                                    <a asp-controller="Archive" asp-action="DeleteDataOfSlab" asp-route-Id="@obj.Id" style="background-color:firebrick; border-color:firebrick; color:white" class="btn btn-primary">Удалить</a>
+                                    <a asp-controller="Archive" asp-action="DeleteDataOfSlab" asp-route-Id="@obj.Id" class="btn btn-del">Удалить</a>
                                 </div>
                             </td>
                         </tr>
