--- a/FireResistance.Web/Views/FireResistance/ColumnFireFourSide.cshtml
+++ b/FireResistance.Web/Views/FireResistance/ColumnFireFourSide.cshtml
@@ -9,7 +9,7 @@
 {
     <div class="container">
         <div class="row">
-            <a href="#sourcedata" style="background-color:gainsboro; border-color:gray; color:black" class="btn btn-primary" >Перейти к исходным данным</a>
+            <a href="#sourcedata" class="btn btn-common">Перейти к исходным данным</a>
         </div>
     </div>
     @*<a href="#sourcedata" style="color: black">Перейти к исходным данным</a>*@
@@ -121,12 +121,12 @@
         </div>
         <div class="row">
             <div class="col-md-2">
-                <button asp-action="ColumnFireFourSide" type="submit" style="background-color:gainsboro; border-color:gray; color:black" class="btn btn-primary">Выполнить расчет</button>
+                <button asp-action="ColumnFireFourSide" type="submit" class="btn btn-common">Выполнить расчет</button>
             </div>
         @if (User.Identity.IsAuthenticated)
         {
             <div class="col-md-4">
-                    <button asp-action="AddDataForCalculationOfColumn" type="submit" style="background-color:gainsboro; border-color:gray; color:black" class="btn btn-primary">Сохранить расчетные данные</button>
+                    <button asp-action="AddDataForCalculationOfColumn" type="submit" class="btn btn-common">Сохранить расчетные данные</button>
             </div>
         }
         </div> 
