--- a/FireResistance.Web/Views/Main/Index.cshtml
+++ b/FireResistance.Web/Views/Main/Index.cshtml
@@ -8,13 +8,13 @@
         </p>
         <div class="container">
             <div class="row">
-                <a asp-controller="FireResistance" asp-action="ColumnFireFourSide" style="background-color:gainsboro; border-color:gray; color:black" class="btn btn-primary">Проверка предела огнестойкости железобетонной колонны подверженной огневому воздействию с 4 сторон.</a>
+                <a asp-controller="FireResistance" asp-action="ColumnFireFourSide" class="btn btn-common">Проверка предела огнестойкости железобетонной колонны подверженной огневому воздействию с 4 сторон.</a>
             </div> <br />
             <div class="row">
-                <a asp-controller="FireResistance" asp-action="SlabWithRigidConnectionToColumns" style="background-color:gainsboro; border-color:gray; color:black" class="btn btn-primary">Проверка предела огнестойкости безбалочной железобетонной плиты перекрытия сплошного сечения с жестким опиранием на колонны. При условии огневого воздействия снизу.</a>
+                <a asp-controller="FireResistance" asp-action="SlabWithRigidConnectionToColumns" class="btn btn-common">Проверка предела огнестойкости безбалочной железобетонной плиты перекрытия сплошного сечения с жестким опиранием на колонны. При условии огневого воздействия снизу.</a>
             </div><br />
             <div class="row">
-                <a asp-controller="FireResistance" asp-action="SlabWithRigidConnectionToTwoWalls" style="background-color:gainsboro; border-color:gray; color:black" class="btn btn-primary">Проверка предела огнестойкости безбалочной железобетонной плиты перекрытия сплошного сечения с жестким опиранием по двум сторонам на стены. При условии огневого воздействия снизу.</a>
+                <a asp-controller="FireResistance" asp-action="SlabWithRigidConnectionToTwoWalls" class="btn btn-common">Проверка предела огнестойкости безбалочной железобетонной плиты перекрытия сплошного сечения с жестким опиранием по двум сторонам на стены. При условии огневого воздействия снизу.</a>
             </div>
         </div>
     </section><hr>
